feat: object detector initial

--- a/main.ipynb
+++ b/main.ipynb
@@ -12,11 +12,176 @@
     "- Mario Guerra - 21008\n",
     "- Emilio Solano - 21212"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import mediapipe as mp\n",
+    "\n",
+    "# Configuraciones para dibujar\n",
+    "mp_drawing = mp.solutions.drawing_utils\n",
+    "mp_drawing_styles = mp.solutions.drawing_styles\n",
+    "\n",
+    "# Si prefieres solo detección de caras, manos, etc., \n",
+    "# puedes inicializar en su lugar mp.solutions.face_detection o mp.solutions.hands.\n",
+    "mp_holistic = mp.solutions.holistic\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def procesar_frame(frame, holistic):\n",
+    "    \"\"\"\n",
+    "    Procesa un frame de video usando un modelo Holistic de MediaPipe.\n",
+    "    Devuelve el frame con las anotaciones dibujadas.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Convertimos a RGB para MediaPipe\n",
+    "    image_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "    \n",
+    "    # Opcional: cambiar la imagen a no-writeable para optimizar\n",
+    "    image_rgb.flags.writeable = False\n",
+    "    \n",
+    "    # Procesa la imagen con el modelo\n",
+    "    results = holistic.process(image_rgb)\n",
+    "    \n",
+    "    # Volver a writeable para dibujar\n",
+    "    image_rgb.flags.writeable = True\n",
+    "    \n",
+    "    # Convertimos de vuelta a BGR (para mostrar con OpenCV)\n",
+    "    image_bgr = cv2.cvtColor(image_rgb, cv2.COLOR_RGB2BGR)\n",
+    "\n",
+    "    # Dibuja la pose\n",
+    "    if results.pose_landmarks:\n",
+    "        mp_drawing.draw_landmarks(\n",
+    "            image_bgr,\n",
+    "            results.pose_landmarks,\n",
+    "            mp_holistic.POSE_CONNECTIONS,\n",
+    "            landmark_drawing_spec=mp_drawing_styles.get_default_pose_landmarks_style()\n",
+    "        )\n",
+    "\n",
+    "    # Dibuja los landmarks de la cara\n",
+    "    if results.face_landmarks:\n",
+    "        mp_drawing.draw_landmarks(\n",
+    "            image_bgr,\n",
+    "            results.face_landmarks,\n",
+    "            mp_holistic.FACEMESH_TESSELATION,\n",
+    "            landmark_drawing_spec=None,\n",
+    "            connection_drawing_spec=mp_drawing_styles.get_default_face_mesh_tesselation_style()\n",
+    "        )\n",
+    "        mp_drawing.draw_landmarks(\n",
+    "            image_bgr,\n",
+    "            results.face_landmarks,\n",
+    "            mp_holistic.FACEMESH_CONTOURS,\n",
+    "            landmark_drawing_spec=None,\n",
+    "            connection_drawing_spec=mp_drawing_styles.get_default_face_mesh_contours_style()\n",
+    "        )\n",
+    "\n",
+    "    # Dibuja los landmarks de la mano izquierda\n",
+    "    if results.left_hand_landmarks:\n",
+    "        mp_drawing.draw_landmarks(\n",
+    "            image_bgr,\n",
+    "            results.left_hand_landmarks,\n",
+    "            mp_holistic.HAND_CONNECTIONS,\n",
+    "            landmark_drawing_spec=mp_drawing_styles.get_default_hand_landmarks_style(),\n",
+    "            connection_drawing_spec=mp_drawing_styles.get_default_hand_connections_style()\n",
+    "        )\n",
+    "\n",
+    "    # Dibuja los landmarks de la mano derecha\n",
+    "    if results.right_hand_landmarks:\n",
+    "        mp_drawing.draw_landmarks(\n",
+    "            image_bgr,\n",
+    "            results.right_hand_landmarks,\n",
+    "            mp_holistic.HAND_CONNECTIONS,\n",
+    "            landmark_drawing_spec=mp_drawing_styles.get_default_hand_landmarks_style(),\n",
+    "            connection_drawing_spec=mp_drawing_styles.get_default_hand_connections_style()\n",
+    "        )\n",
+    "    \n",
+    "    return image_bgr\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 23\u001b[39m\n\u001b[32m     20\u001b[39m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[32m     22\u001b[39m \u001b[38;5;66;03m# Procesar el frame con la función que definimos\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m23\u001b[39m frame_procesado = \u001b[43mprocesar_frame\u001b[49m\u001b[43m(\u001b[49m\u001b[43mframe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mholistic\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     25\u001b[39m \u001b[38;5;66;03m# Mostrar el frame procesado en una ventana\u001b[39;00m\n\u001b[32m     26\u001b[39m cv2.imshow(\u001b[33m\"\u001b[39m\u001b[33mDetección Holistic - MediaPipe\u001b[39m\u001b[33m\"\u001b[39m, frame_procesado)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 14\u001b[39m, in \u001b[36mprocesar_frame\u001b[39m\u001b[34m(frame, holistic)\u001b[39m\n\u001b[32m     11\u001b[39m image_rgb.flags.writeable = \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m# Procesa la imagen con el modelo\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m results = \u001b[43mholistic\u001b[49m\u001b[43m.\u001b[49m\u001b[43mprocess\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage_rgb\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     16\u001b[39m \u001b[38;5;66;03m# Volver a writeable para dibujar\u001b[39;00m\n\u001b[32m     17\u001b[39m image_rgb.flags.writeable = \u001b[38;5;28;01mTrue\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Alvar\\OneDrive\\Documentos\\SemestreIX\\Vision\\Project2CV\\env\\Lib\\site-packages\\mediapipe\\python\\solutions\\holistic.py:160\u001b[39m, in \u001b[36mHolistic.process\u001b[39m\u001b[34m(self, image)\u001b[39m\n\u001b[32m    136\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mprocess\u001b[39m(\u001b[38;5;28mself\u001b[39m, image: np.ndarray) -> NamedTuple:\n\u001b[32m    137\u001b[39m \u001b[38;5;250m  \u001b[39m\u001b[33;03m\"\"\"Processes an RGB image and returns the pose landmarks, left and right hand landmarks, and face landmarks on the most prominent person detected.\u001b[39;00m\n\u001b[32m    138\u001b[39m \n\u001b[32m    139\u001b[39m \u001b[33;03m  Args:\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    157\u001b[39m \u001b[33;03m         \"enable_segmentation\" is set to true.\u001b[39;00m\n\u001b[32m    158\u001b[39m \u001b[33;03m  \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m160\u001b[39m   results = \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mprocess\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_data\u001b[49m\u001b[43m=\u001b[49m\u001b[43m{\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mimage\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mimage\u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    161\u001b[39m   \u001b[38;5;28;01mif\u001b[39;00m results.pose_landmarks:  \u001b[38;5;66;03m# pytype: disable=attribute-error\u001b[39;00m\n\u001b[32m    162\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m landmark \u001b[38;5;129;01min\u001b[39;00m results.pose_landmarks.landmark:  \u001b[38;5;66;03m# pytype: disable=attribute-error\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Alvar\\OneDrive\\Documentos\\SemestreIX\\Vision\\Project2CV\\env\\Lib\\site-packages\\mediapipe\\python\\solution_base.py:340\u001b[39m, in \u001b[36mSolutionBase.process\u001b[39m\u001b[34m(self, input_data)\u001b[39m\n\u001b[32m    334\u001b[39m   \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    335\u001b[39m     \u001b[38;5;28mself\u001b[39m._graph.add_packet_to_input_stream(\n\u001b[32m    336\u001b[39m         stream=stream_name,\n\u001b[32m    337\u001b[39m         packet=\u001b[38;5;28mself\u001b[39m._make_packet(input_stream_type,\n\u001b[32m    338\u001b[39m                                  data).at(\u001b[38;5;28mself\u001b[39m._simulated_timestamp))\n\u001b[32m--> \u001b[39m\u001b[32m340\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_graph\u001b[49m\u001b[43m.\u001b[49m\u001b[43mwait_until_idle\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    341\u001b[39m \u001b[38;5;66;03m# Create a NamedTuple object where the field names are mapping to the graph\u001b[39;00m\n\u001b[32m    342\u001b[39m \u001b[38;5;66;03m# output stream names.\u001b[39;00m\n\u001b[32m    343\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m._output_stream_type_info \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    }
+   ],
+   "source": [
+    "# Abre la cámara (índice 0 suele ser la cámara por defecto)\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "# Ajusta el ancho y alto si lo deseas\n",
+    "cap.set(cv2.CAP_PROP_FRAME_WIDTH, 640)\n",
+    "cap.set(cv2.CAP_PROP_FRAME_HEIGHT, 480)\n",
+    "\n",
+    "with mp_holistic.Holistic(\n",
+    "    static_image_mode=False,\n",
+    "    model_complexity=1, \n",
+    "    smooth_landmarks=True, \n",
+    "    enable_segmentation=False, \n",
+    "    smooth_segmentation=True,\n",
+    "    refine_face_landmarks=True\n",
+    ") as holistic:\n",
+    "\n",
+    "    while True:\n",
+    "        ret, frame = cap.read()\n",
+    "        if not ret:\n",
+    "            break\n",
+    "        \n",
+    "        # Procesar el frame con la función que definimos\n",
+    "        frame_procesado = procesar_frame(frame, holistic)\n",
+    "\n",
+    "        # Mostrar el frame procesado en una ventana\n",
+    "        cv2.imshow(\"Detección Holistic - MediaPipe\", frame_procesado)\n",
+    "        \n",
+    "        # Si se presiona la tecla 'q', salimos\n",
+    "        if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "            break\n",
+    "\n",
+    "# Liberar recursos\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
