fix: yolov5 space

--- a/exercise2.ipynb
+++ b/exercise2.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
     "\n",
     "    # 🧠 Inferencia con YOLO\n",
     "    pred = model(img_yolo)\n",
-    "    pred = non_max_suppression(pred, conf_thres=0.5, classes=[0])  # clase 0 = persona\n",
+    "    pred = non_max_suppression(pred, conf_thres=0.5, classes=[0])\n",
     "\n",
     "    for det in pred:\n",
     "        if det is not None and len(det):\n",
