--- a/main.ipynb
+++ b/main.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,14 +26,12 @@
     "mp_drawing = mp.solutions.drawing_utils\n",
     "mp_drawing_styles = mp.solutions.drawing_styles\n",
     "\n",
-    "# Si prefieres solo detección de caras, manos, etc., \n",
-    "# puedes inicializar en su lugar mp.solutions.face_detection o mp.solutions.hands.\n",
     "mp_holistic = mp.solutions.holistic\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,8 +43,7 @@
     "    \n",
     "    # Convertimos a RGB para MediaPipe\n",
     "    image_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
-    "    \n",
-    "    # Opcional: cambiar la imagen a no-writeable para optimizar\n",
+    "\n",
     "    image_rgb.flags.writeable = False\n",
     "    \n",
     "    # Procesa la imagen con el modelo\n",
@@ -109,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -128,10 +125,9 @@
     }
    ],
    "source": [
-    "# Abre la cámara (índice 0 suele ser la cámara por defecto)\n",
+    "# Abre la cámara\n",
     "cap = cv2.VideoCapture(0)\n",
     "\n",
-    "# Ajusta el ancho y alto si lo deseas\n",
     "cap.set(cv2.CAP_PROP_FRAME_WIDTH, 640)\n",
     "cap.set(cv2.CAP_PROP_FRAME_HEIGHT, 480)\n",
     "\n",
@@ -5405,7 +5401,6 @@
     "            y = int(lm.y * h) + offset_y\n",
     "            cv2.circle(frame, (x, y), 1, (255, 0, 0), -1)\n",
     "\n",
-    "    # Puedes agregar para manos usando results.left_hand_landmarks y results.right_hand_landmarks si se desea.\n",
     "\n",
     "# Abrir la cámara\n",
     "cap = cv2.VideoCapture(0)\n",
